# curses_components

./: .gitignore  LICENSE  Makefile  README  TODO.md  curses_component.py  pyproject.toml  requirements.md  setup.py  test_control.py
curses_components/: __init__.py  editor.py  grid.py  popup.py  theme.py
examples/: grid_editor.py  text_editor.py
util/: show_colors.py
